# activity-tracker

./: LICENSE.txt  README.md  pyproject.toml
activity_tracker/: __init__.py  agent.py  db.py  idle.py  input.py  x11.py
docs/: MANUAL_VERIFICATION.md
scripts/: systemd-setup.sh
tests/: test_agent.py  test_db.py  test_idle.py  test_input.py  test_x11.py
