[project]
name = "activity-tracker"
version = "0.1.0"
description = "Privacy-first local time tracker for Linux (X11)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["python-xlib>=0.33", "pynput>=1.7.7"]


[project.scripts]
activity-agent = "activity_tracker.agent:main"

[dependency-groups]
dev = ["pytest>=9.1.0"]

[tool.uv]
package = true
